--- a/templates/actor/parts/actor-skills.html
+++ b/templates/actor/parts/actor-skills.html
@@ -1,22 +1,27 @@
 <div class="skills-list">
-    {{log actor}}
-    {{#each actor.skills as |skills skillcategory|}}
-        <table class="skill-category-table skillcategory" data-skillcategory="{{skillcategory}}">
+    {{log "starting skill list"}}
+    {{log data}}
+    {{log skills}}
+    {{#each data.skills as |skillList skillcat|}}
+        <table class="skill-category-table skillcategory" data-skillcategory="{{skillcat}}">
             <thead>
                 <tr>
-                    <th class="item-name" colspan="2">{{skillcategory}}</th>
-                    <th class="item-name">{{skillcategorymodifier @root.actor.data.skillcategory skillcategory}}</th>
+                    <th class="item-name" colspan="2">{{skillcat}}</th>
+                    {{log skillList}}
+                    {{log @root}}
+                    <th class="item-name">{{skillcategorymodifier @root.data.skillcategory skillcat}}</th>
                     <th class="item-name">
-                        <a class="item-control item-create" title="Create item" data-type="skill" data-skillcategory="{{skillcategory}}"><i class="fas fa-plus"></i></a>
+                        <a class="item-control item-create" title="Create item" data-type="skill" data-skillcategory="{{skillcat}}"><i class="fas fa-plus"></i></a>
                     </th>
 
                 </tr>
             </thead>
-            {{#each skills as |item id|}}
+            {{#each skillList as |item id|}}
+                {{log item}}
                 <tr class="skill" data-item-id="{{item._id}}" data-itemid="{{item._id}}">
-                    <td class="item" data-itemid="{{item._id}}" colspan="2"><a class="skill-roll" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">{{item.name}}</a></td>
-                    <td class="item" data-itemid="{{item._id}}"><a class="skill-roll" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">{{item.data.total}}</a></td>
-                    <td class="item" data-itemid="{{item._id}}"><input class="experience" id="{{id}}_{{item._id}}_experience_skill" type="checkbox" name="item.data.experience" {{checked item.data.experience}}/></td>                         
+                    <td class="item" data-itemid="{{item._id}}" colspan="2"><a class="skill-roll" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.data.skillcategory}}">{{item.name}}</a></td>
+                    <td class="item" data-itemid="{{item._id}}"><a class="skill-roll" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.data.skillcategory}}">{{item.data.data.total}}</a></td>
+                    <td class="item" data-itemid="{{item._id}}"><input class="experience" id="{{id}}_{{item._id}}_experience_skill" type="checkbox" name="item.data.data.experience" {{checked item.data.data.experience}}/></td>                         
                 </tr>
             {{/each}}
         </table>
