--- a/templates/actor/parts/actor-combat.html
+++ b/templates/actor/parts/actor-combat.html
@@ -7,22 +7,22 @@
                 <a class="item-control item-create" title="Create item" data-type="hitlocation"><i class="fas fa-plus"></i></a>
             </div>
         </li>
-        {{#each actor.hitlocations as |hl id|}}
+        {{#each data.hitlocations as |hl id|}}
             <li class="item flexrow" data-item-id="{{hl._id}}">
                 <h4 class="item-name">{{hl.name}}</h4>
                 <div  class="attribute-editbox">
                     <!-- <input  class="attribute-value"  type="text"  name="hl.data.hp.value"  value="{{hl.data.hp.value}}"  data-dtype="Number"  /> -->
-                    <input id="{{id}}_{{hl._id}}_currenthp_hitloc" type="text" name="hl.data.currenthp" value="{{hl.data.currenthp}}" />
+                    <input id="{{id}}_{{hl._id}}_currenthp_hitloc" type="text" name="hl.data.data.currenthp" value="{{hl.data.data.currenthp}}" />
                 </div>
                 /
-                <h4 class="item-name">{{hl.data.maxhp}}</h4>
+                <h4 class="item-name">{{hl.data.data.maxhp}}</h4>
                 <div  class="attribute-editbox">
-                    <input  class="attribute-value"  type="text"  name="hl.data.armor"  value="{{hl.data.armor}}"  data-dtype="Number"  />
+                    <input  class="attribute-value"  type="text"  name="hl.data.data.armor"  value="{{hl.data.data.armor}}"  data-dtype="Number"  />
                 </div>
                 <div  class="attribute-editbox">
-                    <input  class="attribute-value"  type="text"  name="hl.data.wounds"  value="{{hl.data.wounds}}"  data-dtype="Number"  />
+                    <input  class="attribute-value"  type="text"  name="hl.data.data.wounds"  value="{{hl.data.data.wounds}}"  data-dtype="Number"  />
                 </div>
-                <h4 class="item-name">{{hl.data.condition}}</h4>
+                <h4 class="item-name">{{hl.data.data.condition}}</h4>
                 <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -41,15 +41,13 @@
                 <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
             </div>
         </li>
-        {{log "trying to display config"}}
-        {{log config}}
-        {{#each actor.attacks.melee as |attack id|}}
+        {{#each data.attacks.melee as |attack id|}}
             <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
                 <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
-                <h4 class="item-name">{{log lookup config.weaponskills [attack.data.skillused]}}</h4>
-                <label class="skill-value">{{attack.data.modifier}}</label>
-                <h4 class="item-name">{{attack.data.damage}}</h4>
-                <h4 class="item-name">{{attack.data.hpcurrent}} / {{attack.data.hpmax}}</h4>
+                <h4 class="item-name">{{log lookup config.weaponskills [attack.data.data.skillused]}}</h4>
+                <label class="skill-value">{{attack.data.data.modifier}}</label>
+                <h4 class="item-name">{{attack.data.data.damage}}</h4>
+                <h4 class="item-name">{{attack.data.data.hpcurrent}} / {{attack.data.data.hpmax}}</h4>
                 <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -67,13 +65,13 @@
                 <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
             </div>
         </li>
-        {{#each actor.attacks.missile as |attack id|}}
+        {{#each data.attacks.missile as |attack id|}}
             <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="missileweapons">
                 <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
-                <h4 class="item-name">{{attack.data.skillused}}</h4>
-                <label class="skill-value">{{attack.data.modifier}}</label>
-                <h4 class="item-name">{{attack.data.damage}}</h4>
-                <h4 class="item-name">{{attack.data.hpcurrent}} / {{attack.data.hpmax}}</h4>
+                <h4 class="item-name">{{attack.data.data.skillused}}</h4>
+                <label class="skill-value">{{attack.data.data.modifier}}</label>
+                <h4 class="item-name">{{attack.data.data.damage}}</h4>
+                <h4 class="item-name">{{attack.data.data.hpcurrent}} / {{attack.data.data.hpmax}}</h4>
                 <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
@@ -91,13 +89,13 @@
                 <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
             </div>
         </li>
-        {{#each actor.attacks.natural as |attack id|}}
+        {{#each data.attacks.natural as |attack id|}}
             <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
                 <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
-                <h4 class="item-name">{{attack.data.skillused}}</h4>
-                <label class="skill-value">{{attack.data.modifier}}</label>
-                <h4 class="item-name">{{attack.data.damage}}</h4>
-                <h4 class="item-name">{{attack.data.hpcurrent}} / {{attack.data.hpmax}}</h4>
+                <h4 class="item-name">{{attack.data.data.skillused}}</h4>
+                <label class="skill-value">{{attack.data.data.modifier}}</label>
+                <h4 class="item-name">{{attack.data.data.damage}}</h4>
+                <h4 class="item-name">{{attack.data.data.hpcurrent}} / {{attack.data.data.hpmax}}</h4>
                 <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
