--- a/templates/item/attack-sheet.html
+++ b/templates/item/attack-sheet.html
@@ -28,13 +28,28 @@
             </div>        
             <div class="form-group">
                 <label class="label-text">{{localize "RQG.SkillUsed"}}</label>
+                {{log "Skill used in attack"}}
+                {{log @root}}
+                {{#if @root.document.parent}}
+                {{log @root.document.parent.data._id}}
+                <select name="data.skillused">
+                    {{#select data.skillused}}
+                    {{log (getcharacterattackskills @root.document.parent.data._id data.attacktype)}}
+                    {{#each (getcharacterattackskills @root.document.parent.data._id data.attacktype) as |skill id|}}
+                    {{log skill}}
+                    <option value="{{skill._id}}">{{skill.name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>                  
+                {{else}}
                 <select name="data.skillused">
                     {{#select data.skillused}}
                     {{#each config.weaponskills as |name type|}}
                     <option value="{{type}}">{{localize name}}</option>
                     {{/each}}
                     {{/select}}
-                </select>                
+                </select>                  
+                {{/if}}            
             </div>
             <div class="form-group">
                 <label class="label-text">{{localize "RQG.Modifier"}}</label>
