--- a/templates/actor/parts/actor-skills.html
+++ b/templates/actor/parts/actor-skills.html
@@ -1,3 +1,8 @@
+<div class="summary-row flexrow">
+    <button class="skill-init runequest-roll-button">
+        Initialize skills
+    </button>
+</div>
 <div class="skills-list">
     {{log "starting skill list"}}
     {{log data}}
