--- a/templates/actor/parts/actor-sheetheader.html
+++ b/templates/actor/parts/actor-sheetheader.html
@@ -1,4 +1,6 @@
     <header class="sheet-header">
+        {{log "Actor Sheet starting with actor:"}}
+        {{log actor}}
         <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
         <div class="header-fields">
             <div class="summary-general-list">
