--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -16,7 +16,7 @@
     </nav>
 
     {{!-- Sheet Body --}}
-    <section class="sheet-body">
+    <section class="sheet-body section-padding">
         {{!-- Summary Tab --}}
         <div  class="tab summary"  data-group="primary"  data-tab="summary">
             {{> "systems/runequest/templates/actor/parts/actor-summary.html"}}
